--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     <link rel="stylesheet" href="./ccs/style.css">
 </head>
 <body>
+    <header class="header">
+        <div class="wrapper">
+
+            <div class="header__logo">
+                <a href="/" class="header__logo-link">
+                    <img src="./img/odigo-logo.svg" alt="Discover Amazing places in Japan" class="header__logo-pic">
+                </a>
+            </div>
+            <nav class="header__nav">
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#!" class="header__link">Articles</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">Locations</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">Videos</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">Sign in</a>
+                    </li>
+
+                </ul>
+
+            </nav>
+        </div>
+
+    </header>
 
     
 </body>
