--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 </nav>
 
             </div>
-
-
         </div>
-
     </header>
+    <main class="main">
+        <section class="intro">
 
-
+        </section>
+    </main>
 </body>
 
 </html>
