--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
                     come over. Being gorgeous with belly side up i could pee on this if i had the 
                     energy but under the bed, for attack the child, open the door, 
                 </p>
+                <form class="search-form">
+                    <fieldset class="search-form__wrap">
+                        <p class="search-form__info">
+                            <input type="text" class="search-form__field">
+                            <input type="text" class="search-form__field">
+                            <button type="subnit" class="search-form__submit">search</button>
+                        </p>
+                    </fieldset>
+                </form>
             </div>
 
         </section>
