--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                 </h1>
                 <p class="intro__subtitle">
                     Jump off balcony, onto stranger's head. Chase ball of string hide when guests
-                    come over. Being gorgeous with belly side up i could pee on this if i had the 
-                    energy but under the bed, for attack the child, open the door, 
+                    come over. Being gorgeous with belly side up i could pee on this if i had the
+                    energy but under the bed, for attack the child, open the door,
                 </p>
                 <form class="search-form">
                     <fieldset class="search-form__wrap">
                         <p class="search-form__info">
-                            <input type="text" class="search-form__field">
-                            <input type="text" class="search-form__field">
+                            <input type="text" class="search-form__field" placeholder="What would you like to do?">
+                            <input type="text" class="search-form__field" placeholder="Where would you like to go?">
                             <button type="subnit" class="search-form__submit">search</button>
                         </p>
                     </fieldset>
