feat: create benefits

--- a/index.html
+++ b/index.html
@@ -59,9 +59,19 @@
                     </fieldset>
                 </form>
             </div>
+        </section>
+        <section class="benefits">
+            <div class="benefits__wrap">
+                <h2 class="benefits__title">Benefits of Odigo</h2>
+                <div class="benefits__cards">
+                    <div class="benefits__card"></div>
+                    <div class="benefits__card"></div>
+                    <div class="benefits__card"></div>
+                </div>
+
+            </div>
 
         </section>
-    </main>
 </body>
 
 </html>
