feat: continue benefits

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./ccs/style.css">
 </head>
 
+<!-- Header start -->
+
 <body>
     <header class="header">
         <div class="wrapper">
@@ -38,6 +40,11 @@
             </div>
         </div>
     </header>
+
+    <!-- Header end -->
+
+    <!-- Intro start -->
+
     <main class="main">
         <section class="intro">
             <div class="wrapper">
@@ -52,14 +59,21 @@
                 <form class="search-form">
                     <fieldset class="search-form__wrap">
                         <p class="search-form__info">
-                            <input type="text" name="user-like-to-do" class="search-form__field" placeholder="What would you like to do?">
-                            <input type="text" name="user-like-to-go" class="search-form__field" placeholder="Where would you like to go?">
+                            <input type="text" name="user-like-to-do" class="search-form__field"
+                                placeholder="What would you like to do?">
+                            <input type="text" name="user-like-to-go" class="search-form__field"
+                                placeholder="Where would you like to go?">
                             <button type="subnit" class="search-form__submit">search</button>
                         </p>
                     </fieldset>
                 </form>
             </div>
         </section>
+
+        <!-- Intro end -->
+
+        <!-- Benefits start -->
+
         <section class="benefits">
             <div class="benefits__wrap">
                 <h2 class="benefits__title">Benefits of Odigo</h2>
@@ -72,6 +86,8 @@
             </div>
 
         </section>
+
+        <!-- Benefits end -->
 </body>
 
 </html>
