feat: corrected benefits

--- a/index.html
+++ b/index.html
@@ -81,20 +81,24 @@
                 </h2>
                 <div class="benefits__cards">
                     <div class="benefits__card">
-                        <img src="./img/church-icon.svg" alt="Welcome to Odigo!" class="benefits__card-thumb">
+                        <div class="benefits__card-pic">
+                            <img src="./img/church-icon.svg" alt="Welcome to Odigo!"
+                                class="benefits__card-thumb">
+                        </div>
+                        <h3 class="benefits__card-title">
+                            Welcome to Odigo!
+                        </h3>
+                        <p class="benefits__card-desc">
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                        </p>
+                        <a href="#!" class="benefits__card-more">
+                            LEARN MORE
+                        </a>
                     </div>
-                    <h3 class="benefits__card-title">
-                        Welcome to Odigo!
-                    </h3>
-                    <p class="benefits__card-desc">
-                        Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
-                    </p>
-                    <a href="#!" class="benefits__card-more">
-                        LEARN MORE
-                    </a>
                     <div class="benefits__card">
-                        <div class="benefits__card">
-                            <img src="./img/person-icon.svg" alt="Your Personal Japan Guide" class="benefits__card-thumb">
+                        <div class="benefits__card-pic">
+                            <img src="./img/person-icon.svg" alt="Your Personal Japan Guide"
+                                class="benefits__card-thumb">
                         </div>
                         <h3 class="benefits__card-title">
                             Your Personal Japan Guide
@@ -107,8 +111,9 @@
                         </a>
                     </div>
                     <div class="benefits__card">
-                        <div class="benefits__card">
-                            <img src="./img/building-icon.svg" alt="Promoting Local Businesses" class="benefits__card-thumb">
+                        <div class="benefits__card-pic">
+                            <img src="./img/building-icon.svg" alt="Promoting Local Businesses"
+                                class="benefits__card-thumb">
                         </div>
                         <h3 class="benefits__card-title">
                             Promoting Local Businesses
@@ -118,7 +123,7 @@
                         </p>
                         <a href="#!" class="benefits__card-more">
                             LEARN MORE
-                        </a>                        
+                        </a>
                     </div>
                 </div>
             </div>
