--- a/index.html
+++ b/index.html
@@ -128,8 +128,19 @@
                 </div>
             </div>
         </section>
-
         <!-- Benefits end -->
+
+        <!-- Places start -->
+        <section class="places">
+            <div class="wrapper-full">
+                <h2 class="places__title section-title">
+                    Get inspired for your next trip
+                </h2>
+            </div>
+        </section>
+
+        <!-- Places end -->
+        
 
 </body>
 
