--- a/index.html
+++ b/index.html
@@ -133,9 +133,12 @@
         <!-- Places start -->
         <section class="places">
             <div class="wrapper-full">
-                <h2 class="places__title section-title">
-                    Get inspired for your next trip
-                </h2>
+                <div class="places__caption">
+                    <h2 class="places__title section-title">
+                        Get inspired for your next trip
+                    </h2>
+                    <a href="#!" class="places__view-all">VIEW ALL</a>
+                </div>
             </div>
         </section>
 
