--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                 <div class="benefits__cards">
                     <div class="benefits__card">
                         <div class="benefits__card-pic">
-                            <img src="./img/church-icon.svg" alt="Welcome to Odigo!"
-                                class="benefits__card-thumb">
+                            <img src="./img/church-icon.svg" alt="Welcome to Odigo!" class="benefits__card-thumb">
                         </div>
                         <h3 class="benefits__card-title">
                             Welcome to Odigo!
@@ -139,11 +138,26 @@
                     </h2>
                     <a href="#!" class="places__view-all">VIEW ALL</a>
                 </div>
+
+                <div class="places__cards">
+                    <figure class="places__card places__card_size_lg">
+                        <img src="./img/mount fuji.jpg" alt="Mount Fuji" class="places__card-pic">
+                        <figcaption class="places__card-title">
+                            Mount Fuji
+                        </figcaption>
+                    </figure>
+                    <figure class="places__card">
+                        <img src="./img/kyoto.jpg" alt="Kyoto" class="places__card-pic">
+                        <figcaption class="places__card-title">
+                            Kyoto
+                        </figcaption>
+                    </figure>
+                </div>
             </div>
         </section>
 
         <!-- Places end -->
-        
+
 
 </body>
 
