feat: styles places

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             LEARN MORE
                         </a>
                     </div>
-                    <div class="benefits__card">
+                    <div class="benefits__cards">
                         <div class="benefits__card-pic">
                             <img src="./img/building-icon.svg" alt="Promoting Local Businesses"
                                 class="benefits__card-thumb">
@@ -146,7 +146,7 @@
                             Mount Fuji
                         </figcaption>
                     </figure>
-                    <figure class="places__card">
+                    <figure class="places__card places__card_size_lg">
                         <img src="./img/kyoto.jpg" alt="Kyoto" class="places__card-pic">
                         <figcaption class="places__card-title">
                             Kyoto
