feat: added small images

--- a/index.html
+++ b/index.html
@@ -145,13 +145,41 @@
                         <figcaption class="places__card-title">
                             Mount Fuji
                         </figcaption>
+                        <a href="#!" class="places__card-link"></a>
                     </figure>
+
                     <figure class="places__card places__card_size_lg">
                         <img src="./img/kyoto.jpg" alt="Kyoto" class="places__card-pic">
                         <figcaption class="places__card-title">
                             Kyoto
                         </figcaption>
+                        <a href="#!" class="places__card-link"></a>
                     </figure>
+
+                    <figure class="places__card places__card_size_sm">
+                        <img src="./img/tokyo.jpg" alt="Tokyo" class="places__card-pic">
+                        <figcaption class="places__card-title">
+                            Tokyo
+                        </figcaption>
+                        <a href="#!" class="places__card-link"></a>
+                    </figure>
+
+                    <figure class="places__card places__card_size_sm">
+                        <img src="./img/niigata.jpg" alt="Niigata" class="places__card-pic">
+                        <figcaption class="places__card-title">
+                            Niigata
+                        </figcaption>
+                        <a href="#!" class="places__card-link"></a>
+                    </figure>
+
+                    <figure class="places__card places__card_size_sm">
+                        <img src="./img/sapporo.jpg" alt="Sapporo" class="places__card-pic">
+                        <figcaption class="places__card-title">
+                            Sapporo
+                        </figcaption>
+                        <a href="#!" class="places__card-link"></a>
+                    </figure>
+
                 </div>
             </div>
         </section>
