feat: end section 3

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                 <div class="places__cards">
                     <figure class="places__card places__card_size_lg">
-                        <img src="./img/mount fuji.jpg" alt="Mount Fuji" class="places__card-pic">
+                        <img src="./img/mount fuji.jpg" alt="Mount Fuji" class="places__card-pic_size_lg">
                         <figcaption class="places__card-title">
                             Mount Fuji
                         </figcaption>
@@ -149,7 +149,7 @@
                     </figure>
 
                     <figure class="places__card places__card_size_lg">
-                        <img src="./img/kyoto.jpg" alt="Kyoto" class="places__card-pic">
+                        <img src="./img/kyoto.jpg" alt="Kyoto" class="places__card-pic_size_lg">
                         <figcaption class="places__card-title">
                             Kyoto
                         </figcaption>
@@ -157,7 +157,7 @@
                     </figure>
 
                     <figure class="places__card places__card_size_sm">
-                        <img src="./img/tokyo.jpg" alt="Tokyo" class="places__card-pic">
+                        <img src="./img/tokyo.jpg" alt="Tokyo" class="places__card-pic_size_sm">
                         <figcaption class="places__card-title">
                             Tokyo
                         </figcaption>
@@ -165,7 +165,7 @@
                     </figure>
 
                     <figure class="places__card places__card_size_sm">
-                        <img src="./img/niigata.jpg" alt="Niigata" class="places__card-pic">
+                        <img src="./img/niigata.jpg" alt="Niigata" class="places__card-pic_size_sm">
                         <figcaption class="places__card-title">
                             Niigata
                         </figcaption>
@@ -173,7 +173,7 @@
                     </figure>
 
                     <figure class="places__card places__card_size_sm">
-                        <img src="./img/sapporo.jpg" alt="Sapporo" class="places__card-pic">
+                        <img src="./img/sapporo.jpg" alt="Sapporo" class="places__card-pic_size_sm">
                         <figcaption class="places__card-title">
                             Sapporo
                         </figcaption>
