feat: added images

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
         <!-- Places end -->
 
-        <!-- Tour start -->
+        <!-- Tours start -->
         <div class="tours">
             <div class="wrapper-full">
                 <div class="tours__tour tour">
@@ -210,7 +210,7 @@
         </div>
 
 
-        <!-- Tour end -->
+        <!-- Tours end -->
 
 
 
