--- a/index.html
+++ b/index.html
@@ -206,6 +206,24 @@
                         <a href="#!" class="tour__more">VIEW PREFECTURE</a>
                     </div>
                 </div>
+
+                <div class="tours__tour tour">
+
+                    <div class="tour__info">
+                        <h3 class="tour__title">
+                            Featured Neighborhood: Kyoto’s Arashiyama
+                        </h3>
+                        <p class="tour__desc">
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this if i had the energy but under the bed,
+                            for attack the child, open the door,
+                        </p>
+                        <a href="#!" class="tour__more">VIEW PREFECTURE</a>
+                    </div>
+                    <div class="tour__pic">
+                        <img src="./img/tour-2.jpg" alt="Featured Neighborhood: Kyoto’s Arashiyama" class="tour__thumb">
+                    </div>
+                </div>
             </div>
         </div>
 
