feat: started section 5

--- a/index.html
+++ b/index.html
@@ -190,7 +190,6 @@
         <div class="tours">
             <div class="wrapper-full">
                 <div class="tours__tour tour">
-
                     <div class="tour__pic">
                         <img src="./img/tour-1.jpg" alt="Prefecture in Focus: Tottori" class="tour__thumb">
                     </div>
@@ -208,7 +207,6 @@
                 </div>
 
                 <div class="tours__tour tour">
-
                     <div class="tour__info">
                         <h3 class="tour__title">
                             Featured Neighborhood: Kyoto’s Arashiyama
@@ -227,8 +225,16 @@
             </div>
         </div>
 
-
         <!-- Tours end -->
+
+        <!-- Top start -->
+        
+
+
+
+        <!-- Top end -->
+
+
 
 
 
