--- a/index.html
+++ b/index.html
@@ -228,7 +228,36 @@
         <!-- Tours end -->
 
         <!-- Top start -->
-        
+        <section class="top">
+            <div class="wrapper__full">
+                <h2 class="top__title section-title">
+                    Today top places to visit
+                </h2>
+                <div class="top__cards">
+                    <div class="top__card">
+                        <div class="top__card-pic">
+                            <img src="./img/top-place-pic1.jpg" alt="NAGOYA" class="top__card-thumb">
+                            <div class="top__card-stats">
+                                <h3 class="top__card-title">
+                                    NAGOYA
+                                </h3>
+                                <div class="top__card-likes">
+                                    <span class="top__card-likes-value">
+                                        
+                                    </span>
+
+                                </div>
+                                <div class="top__cards-comments">
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
 
 
 
