--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
                     Today top places to visit
                 </h2>
                 <div class="top__cards">
+                    
                     <div class="top__card">
                         <div class="top__card-pic">
                             <img src="./img/top-place-pic1.jpg" alt="NAGOYA" class="top__card-thumb">
@@ -243,11 +244,13 @@
                                 </h3>
                                 <div class="top__card-likes">
                                     <span class="top__card-likes-value">
-                                        
+                                        221
                                     </span>
-
                                 </div>
                                 <div class="top__cards-comments">
+                                    <span class="top__card-comments-value">
+                                        50
+                                    </span>
 
                                 </div>
                             </div>
