--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
         <!-- Top start -->
         <section class="top">
-            <div class="wrapper__full">
+            <div class="wrapper-full">
                 <h2 class="top__title section-title">
                     Today top places to visit
                 </h2>
@@ -246,13 +246,19 @@
                                         221
                                     </span>
                                 </div>
-                                <div class="top__cards-comments">
+                                <div class="top__card-comments">
                                     <span class="top__card-comments-value">
                                         50
                                     </span>
                                 </div>
                             </div>
                         </div>
+                        <p class="top__card-desc">
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this. 
+                        </p>
+                        <a href="#!" class="top__card-more">
+                            SEE MORE
+                        </a>
                     </div>
                 </div>
             </div>
@@ -261,11 +267,6 @@
 
 
         <!-- Top end -->
-
-
-
-
-
 
 </body>
 
