feat: add main-js

--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this. 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
                         </p>
                         <a href="#!" class="top__card-more">
                             SEE MORE
@@ -280,7 +281,8 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this. 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
                         </p>
                         <a href="#!" class="top__card-more">
                             SEE MORE
@@ -306,7 +308,8 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this. 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
                         </p>
                         <a href="#!" class="top__card-more">
                             SEE MORE
@@ -332,7 +335,8 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this. 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
                         </p>
                         <a href="#!" class="top__card-more">
                             SEE MORE
@@ -358,7 +362,8 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this. 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
                         </p>
                         <a href="#!" class="top__card-more">
                             SEE MORE
@@ -384,7 +389,8 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this. 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
                         </p>
                         <a href="#!" class="top__card-more">
                             SEE MORE
@@ -394,9 +400,14 @@
             </div>
         </section>
 
-
-
         <!-- Top end -->
+
+    </main>
+    <script src="./js/main-js"></script>
+
+
+
+
 
 </body>
 
