feat: wrote function

--- a/index.html
+++ b/index.html
@@ -403,11 +403,7 @@
         <!-- Top end -->
 
     </main>
-    <script src="./js/main-js"></script>
-
-
-
-
+    <script src="./ccs/js/main-js"></script>
 
 </body>
 
