feat: added video

--- a/index.html
+++ b/index.html
@@ -402,8 +402,21 @@
 
         <!-- Top end -->
 
+        <!-- Videos start -->
+
+        <div class="videos">
+            <div class="videos__wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CxuiFNYnEr4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+        </div>
+
+        <!-- Videos end -->
+
+
+
     </main>
-    <script src="./ccs/js/main-js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
