--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@
 
         <div class="videos">
             <div class="videos__wrapper">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/CxuiFNYnEr4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="video__item"></div>
+                <iframe class="video__element" src="https://www.youtube.com/embed/CxuiFNYnEr4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-
         </div>
 
         <!-- Videos end -->
