--- a/index.html
+++ b/index.html
@@ -413,9 +413,17 @@
 
         <!-- Videos end -->
 
-
-
     </main>
+
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__item">
+                <div class="footer__logo">
+                    <img src="./img/footer-logo.svg" class="footer__logo-pic" alt="Discover Amazing places in Japan">
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="js/main.js"></script>
 
 </body>
