--- a/index.html
+++ b/index.html
@@ -421,6 +421,25 @@
                 <div class="footer__logo">
                     <img src="./img/footer-logo.svg" class="footer__logo-pic" alt="Discover Amazing places in Japan">
                 </div>
+                <nav class="footer__nav">
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item">
+                            <h3 class="footer__menu-title">Company</h3>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#!" class="footer__menu-link">About</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#!" class="footer__menu-link">Team</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#!" class="footer__menu-link">Careers</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#!" class="footer__menu-link">Privacy Policy</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </footer>
