--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 placeholder="What would you like to do?">
                             <input type="text" name="user-like-to-go" class="search-form__field"
                                 placeholder="Where would you like to go?">
-                            <button type="subnit" class="search-form__submit">search</button>
+                            <button type="submit" class="search-form__submit">search</button>
                         </p>
                     </fieldset>
                 </form>
