fix: delete some spaces

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                 <div class="places__cards">
                     <figure class="places__card places__card_size_lg">
-                        <img src="./img/mount fuji.jpg" alt="Mount Fuji" class="places__card-pic size_lg">
+                        <img src="./img/mount_fuji.jpg" alt="Mount Fuji" class="places__card-pic size_lg">
                         <figcaption class="places__card-title">
                             Mount Fuji
                         </figcaption>
