feat: change figure to div

--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
                 </div>
 
                 <div class="places__cards">
-                    <figure class="places__card places__card_size_lg">
+                    <div class="places__card places__card_size_lg">
                         <img src="./img/mount_fuji.jpg" alt="Mount Fuji" class="places__card-pic size_lg">
                         <figcaption class="places__card-title">
                             Mount Fuji
                         </figcaption>
                         <a href="#!" class="places__card-link"></a>
-                    </figure>
+                    </div>
 
                     <figure class="places__card places__card_size_lg">
                         <img src="./img/kyoto.jpg" alt="Kyoto" class="places__card-pic size_lg">
