fix: delete figcaption

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                 <div class="places__cards">
                     <div class="places__card places__card_size_lg">
                         <img src="./img/mount_fuji.jpg" alt="Mount Fuji" class="places__card-pic size_lg">
-                        <figcaption class="places__card-title">
+                        <div class="places__card-title">
                             Mount Fuji
-                        </figcaption>
+                        </div>
                         <a href="#!" class="places__card-link"></a>
                     </div>
 
