feat: change tags

--- a/index.html
+++ b/index.html
@@ -148,37 +148,37 @@
                         <a href="#!" class="places__card-link"></a>
                     </div>
 
-                    <figure class="places__card places__card_size_lg">
+                    <div class="places__card places__card_size_lg">
                         <img src="./img/kyoto.jpg" alt="Kyoto" class="places__card-pic size_lg">
-                        <figcaption class="places__card-title">
+                        <div class="places__card-title">
                             Kyoto
-                        </figcaption>
+                        </div>
                         <a href="#!" class="places__card-link"></a>
-                    </figure>
+                    </div>
 
-                    <figure class="places__card places__card_size_sm">
+                    <div class="places__card places__card_size_sm">
                         <img src="./img/tokyo.jpg" alt="Tokyo" class="places__card-pic size_sm">
-                        <figcaption class="places__card-title">
+                        <div class="places__card-title">
                             Tokyo
-                        </figcaption>
+                        </div>
                         <a href="#!" class="places__card-link"></a>
-                    </figure>
+                    </div>
 
-                    <figure class="places__card places__card_size_sm">
+                    <div class="places__card places__card_size_sm">
                         <img src="./img/niigata.jpg" alt="Niigata" class="places__card-pic size_sm">
-                        <figcaption class="places__card-title">
+                        <div class="places__card-title">
                             Niigata
-                        </figcaption>
+                        </div>
                         <a href="#!" class="places__card-link"></a>
-                    </figure>
+                    </div>
 
-                    <figure class="places__card places__card_size_sm">
+                    <div class="places__card places__card_size_sm">
                         <img src="./img/sapporo.jpg" alt="Sapporo" class="places__card-pic size_sm">
-                        <figcaption class="places__card-title">
+                        <div class="places__card-title">
                             Sapporo
-                        </figcaption>
+                        </div>
                         <a href="#!" class="places__card-link"></a>
-                    </figure>
+                    </div>
 
                 </div>
             </div>
