feat: correct index.html

--- a/index.html
+++ b/index.html
@@ -140,40 +140,40 @@
                 </div>
 
                 <div class="places__cards">
-                    <div class="places__card places__card_size_lg">
-                        <img src="./img/mount_fuji.jpg" alt="Mount Fuji" class="places__card-pic size_lg">
+                    <div class="places__card places__card-size-lg">
+                        <img src="./img/mount_fuji.jpg" alt="Mount Fuji" class="places__card-pic size-lg">
                         <div class="places__card-title">
                             Mount Fuji
                         </div>
                         <a href="#!" class="places__card-link"></a>
                     </div>
 
-                    <div class="places__card places__card_size_lg">
-                        <img src="./img/kyoto.jpg" alt="Kyoto" class="places__card-pic size_lg">
+                    <div class="places__card places__card-size-lg">
+                        <img src="./img/kyoto.jpg" alt="Kyoto" class="places__card-pic size-lg">
                         <div class="places__card-title">
                             Kyoto
                         </div>
                         <a href="#!" class="places__card-link"></a>
                     </div>
 
-                    <div class="places__card places__card_size_sm">
-                        <img src="./img/tokyo.jpg" alt="Tokyo" class="places__card-pic size_sm">
+                    <div class="places__card places__card-size-sm">
+                        <img src="./img/tokyo.jpg" alt="Tokyo" class="places__card-pic size-sm">
                         <div class="places__card-title">
                             Tokyo
                         </div>
                         <a href="#!" class="places__card-link"></a>
                     </div>
 
-                    <div class="places__card places__card_size_sm">
-                        <img src="./img/niigata.jpg" alt="Niigata" class="places__card-pic size_sm">
+                    <div class="places__card places__card-size-sm">
+                        <img src="./img/niigata.jpg" alt="Niigata" class="places__card-pic size-sm">
                         <div class="places__card-title">
                             Niigata
                         </div>
                         <a href="#!" class="places__card-link"></a>
                     </div>
 
-                    <div class="places__card places__card_size_sm">
-                        <img src="./img/sapporo.jpg" alt="Sapporo" class="places__card-pic size_sm">
+                    <div class="places__card places__card-size-sm">
+                        <img src="./img/sapporo.jpg" alt="Sapporo" class="places__card-pic size-sm">
                         <div class="places__card-title">
                             Sapporo
                         </div>
